# longevity-prediction

./: .gitignore  .gitmodules  README.md  pyproject.toml
data/processed/: data_final.csv  life_expectancy_cleaned.csv  life_expectancy_engineered.csv
docs/: data_dictionary.md
models/baseline/: test_data_used.csv  test_metrics.csv
models/baseline_v1/: baseline_model.pkl  features.csv  train_metrics.csv
models/baseline_v2/: comparison_summary.csv  metadata.json  model.pkl  test_data_sample.csv  test_metrics.csv  train_metrics.csv
models/best_model/: metadata.json  performance_summary.csv
models/initial_search/: comparison_metrics.csv
notebooks/: 01_eda_and_preprocessing.ipynb  01_preprocessing_and_eda.ipynb  02_modelling.ipynb
results/: model_comparison.csv  stability_metrics.csv
src/longevity_prediction/: notebook_setup.py
src/longevity_prediction/utils/: data_io.py  evaluation.py  notebook_setup.py
