[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "longevity_prediction"
version = "0.1.0"
description = "Longevity prediction project"
requires-python = ">=3.9"
readme = "README.md"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[project.dependencies]
pandas
numpy
scikit-learn
matplotlib
seaborn
xgboost