[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "longevity_prediction"
version = "0.1.0"
description = "Longevity prediction project"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "xgboost",
    "pyyaml"  
]
[tool.setuptools]
packages = ["ml_core_utils"]
package-dir = {"ml_core_utils" = "ml_core_utils"}